<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.remindapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_edit"
            app:destination="@id/navigation_edit" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />

    </fragment>

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.example.remindapp.ui.edit.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit">

        <argument
            android:name="selection"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.remindapp.ui.notifications.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">

        <argument
            android:name="selection"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
</navigation>